Update lineare_ligningssystemer.tex, kompleksitet.tex, and 3 more files...

--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -1,6 +1,6 @@
 \section{Lineære ligningssystemer }
 %
-En \textit{lineær ligning} med variablerne $x_1,x_2,\ldots ,x_n$ er en ligning, som har formen
+En \textit{lineær ligning} med variablene $x_1,x_2,\ldots ,x_n$ er en ligning, som har formen
 $$ c_1x_1+c_2x_2+\cdots+c_nx_n=b \text{,}$$ 
 hvor $\{c_1,c_2,\ldots,c_n\} \in \R$. 
 %
