--- a/incl/main/simplex_metoden/simplex_metoden_typer.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_typer.tex
@@ -9,7 +9,7 @@ For den indledende iteration, haves indekserne
 $B(1),\ldots,B(m)$ for de givne basisvariable. 
 Derudfra kan der dannes en basis matrix $B$ og beregne $\mathbf{p}^T=\mathbf{c}_{\text{B}}^T B^{-1}$ ved at løse det lineære ligningssystem $\mathbf{p}^T B=\mathbf{c}_{\text{B}}^T$ for den ukendte vektor $\mathbf{p}$. 
 Hertil kan det ydermere nævnes, at $\mathbf{p}$ betegnes som den vektor bestående af de simplexmultiplikationer, som tilknyttet med basen $B$. 
-Den reducerede objektfunktion $c_j^* = c_j - \mathbf{c}_B^T B^{-1}A_j$ for enhver variable $x_j$, er derfor givet ved følgende formel:
+Den reducerede objektfunktion $c_j^* = c_j - \mathbf{c}_B^T B^{-1}A_j$ for enhver variabel $x_j$, er derfor givet ved følgende formel:
 %
 \begin{align*}
 c_j^* = c_j - \mathbf{p}^T A_j.
