--- a/incl/main/simplex_metoden/pivoterings_lokke.tex
+++ b/incl/main/simplex_metoden/pivoterings_lokke.tex
@@ -1,5 +1,5 @@
 \section{Pivoteringsløkker}
-Ved degenererede basale løsninger er der en risiko for, at simplexmetoden blot skifter variabler ind og ud af basis, således at den sidder fast i en uendelig løkke.  
+Ved degenererede basale løsninger er der en risiko for, at simplexmetoden blot skifter variable ind og ud af basis, således at den sidder fast i en uendelig løkke.  
 For at garantere at simplexmetoden stopper ved en optimal værdi og ikke fortsætter med at pivotere uendeligt, kan der indføres forskellige regler for, hvilken variabel skal komme ind i løsningen.
 
 \subsection{Lexicografi}
