--- a/CSB/EPG2/incl/main/13.tex
+++ b/CSB/EPG2/incl/main/13.tex
@@ -4,9 +4,18 @@
 %
 \begin{color}{AAUblue2}
 %
-fisk
+\textbf{Opgavebeskrivelse:} 
+Forklar idéen i en sammensat adaptiv kvadraturregel.
 % 
 \end{color}
 \\\\
 % 
+\textbf{Besvarelse:} 
+Idéen i de adaptive kvadraturregler omhandler, hvordan en funktion kan behandles, når der ikke kan udvælges punkter til underinddeling på forhånd. Eksempelvis hvis funktionen ikke er kendt, men funktionsværdien kendes for en mængde af punkter.
+Der findes to primære måder at lave disse underinddelinger: \\
+1. Der vælges et antal $N$ underinddelinger af det oprindelige interval af formen $\left [  x_k, x_{k+1} \right ]$, hvor $a=x_0<x_1<x_2<\ldots<x_N$ herefter anvendes den sammensatte Simpsons regel beskrevet i opgave 3 hvor antallet af underintervaller i de oprindelige $N$ gennemgår kontinuerlig fordobling.
+(af uransagelige årsager siger bogen at 5 eller 20 er de mest normale inddellinger, dette bliver ikke uddybet) \\
+2. Den anden måde benytter ligeledes den sammensatte Simpsons regel her på intervallet, denne udføres igen på de nye delintervaller samt på begge halvdele af disse, såfremt man er inden for den ønskede nøjagtighed for et givet interval accepteres dette som delresultat og der arbejdes nu med næste delinterval.
+Dette gentages indtil alle delintervaller er opdelt i et antal intervaller der bringer det inden for den ønskede fejl.
+(side 75 bunden)
 %
