--- a/CSB/EPG2/incl/main/14.tex
+++ b/CSB/EPG2/incl/main/14.tex
@@ -3,9 +3,50 @@
 %
 \begin{color}{AAUblue2}
 %
-fisk
+\textbf{Opgavebeskrivelse:} 
+Vi skal nu se på en anvendelse. Vi definerer en funktion ved
+%\begin{align}
+%f(x)=\left \{ \substack{-(x-\sqrt{2})^2 \text{  } \text{for} \text{  } x \leq \sqrt{2} \\ (x-\sqrt{2})^2\text{  } \text{for} \text{  } x > \sqrt{2}}
+%\end{align}
+%
+%Noget galt i ovenstående
+%
+Vi vil se på approksimation af integralet 
+\begin{align}
+\int_{0}^{3}f(x)dx    
+\end{align}
+\\
+(a) Lav en Python funktion til beregning af funktionen defineret i (1).
 % 
 \end{color}
 \\\\
 % 
+\textbf{Besvarelse:} \\\\
+(b) Vis, at den eksakte værdi af integralet er $15-\frac{31\sqrt{2}}{3}$\\
+\textbf{Besvarelse:} \\ 
+\begin{align*}
+\int^{\sqrt{2}}_0-(x-\sqrt{2})^2+\int^3_{\sqrt{2}}(x-\sqrt{2})^2=15-\frac{29\sqrt{2}}{3}-\frac{2^{\frac{3}{2}}}{3}=15-\frac{31\sqrt{2}}{3} 
+\end{align*} \\
+Ved at tage integralet for begge funktioner, og derefter plusse dem sammen, fåes den eksakte værdi $15-\frac{31\sqrt{2}}{3}$\\\\
+(c) Bestem integralet numerisk ved hjælp af de tre sammensatte kvadraturregler
+(midtpunkt, trapez og Simpson). Hvor mange ækvidistante inddelinger skal der
+anvendes i hvert af de tre tilfælde for at opnå en fejl på mindre end $10^{-8}$?\\
+Ved midtpunkt er fejlen mindre end $10^{-8}$ ved cirka $4096$ indelinger.\\
+ved trapez sker dette først ved cirka 8192, altså senere end ved midtpunkt.\\ 
+Ved Simpsons regel sker dette ved ca $512$ og denne opnår dermed højere præcision ved færre iterationer end de foregående to.
+%(Har i andre forslag til hvor mange punkter og iterationer der skal med frem for fordoblingen
+\textbf{spørgsmål}:Hvad menes der med numerisk?\\
+\textbf{Besvarelse:} \\
+(d) Lav i de tre tilfælde numeriske eksperimenter, baseret på fordobling af antal delepunkter, og brug dem til en eksperimentel bestemmelse af ordenen af de tre
+metoder. Stemmer resultaterne med teorien? Hvis der er afvigelser, hvordan kan
+de så forklares?\\
+\textbf{spørgsmål}:Hvorfor springer orden så meget i Simpson efter 8192? \\
+\textbf{Besvarelse:}For både trapez samt midtpunktreglen stabliseres der omkring en orden på 4 efter et passende antal indellinger hvilket stemmer overens med teorien, dette er dog ikke tilfældet for Simpson. Den opnår de 16, men falder drastisk efterfølgende \\\\
+(e) Prøv at anvende en simpel adaptiv metode til at bestemme integralet (2). Hvad
+sker der hvis man inddeler i to delintervaller af samme længde. Hvordan bidrager
+de hver til fejlen i approksimationen? Angiv resultaterne for både trapezreglen og
+Simpsons regel. \\
+\textbf{spørgsmål}: Vi har svært ved at skulle dele i to delintervaller og alt det Python-fis
+\textbf{Besvarelse:} \\
+%%%%%%%%% DONZO GONZO %%%%%%%%%%
 %
