Update mulig_retning.tex, Hyperplan_halvrum_polyeder.tex, and 10 more files...

--- a/fig/tikz/simplex/mulig_retning.tex
+++ b/fig/tikz/simplex/mulig_retning.tex
@@ -72,7 +72,7 @@ south east]{$\mathbf{u}$};
 %
 %
 \end{tikzpicture}
-  \captionof{figure}{Vektorerne $\mathbf{u}, \mathbf{v}$ og $\mathbf{w}$, samt tilhørende forskellige mulige retninger, som stadig er indholdt i polyederet $\mathcal{P}$.}
+  \captionof{figure}{Vektorerne $\mathbf{u}, \mathbf{v}$ og $\mathbf{w}$, samt tilhørende forskellige mulige retninger, som stadig er indeholdt i polyederet $\mathcal{P}$.}
   \label{fig:julieersmuuuuuk}
 \end{center}
 %
