--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -1,5 +1,6 @@
 I henhold til geometriske fremstillinger af lineære programmeringsproblemer er det nødvendigt at definere en række begreber.
 Disse er \textit{polyeder}, \textit{hyperplan} og \textit{halvrum}.
+Dette kapitel tager udgangspunkt i \citep[side 42-70]{bert}, hvis ikke andet er angivet.
 %
 \begin{defn}{}{Polyede}
 Lad $A$ være en $m \times n$ matrix, og lad $\mathbf{b}$ være en vektor i  $\R^m$.
