--- a/incl/main/grafisk_losning/optimering.tex
+++ b/incl/main/grafisk_losning/optimering.tex
@@ -1,4 +1,5 @@
 \section{Optimering af ekstremumspunkter}
+\label{klogskab}
 %
 Så længe en optimal løsning til et lineært optimeringsproblem eksisterer, og løsningsmængden indeholder ét eller flere ekstremumspunkter, så findes en optimal løsning til det lineære programmeringsproblem blandt ekstremumspunkterne i løsningsmængden. 
 \ref{thm:optiekstrem1} fastslår dette for polyedre på standardform og begrænsede polyedre. 
