--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
@@ -11,7 +11,7 @@ Algoritmen gennemgår således følgende skridt:
 \begin{enumerate}
 \item Find første ikke-nulsøjle fra venstre i matricen.
 \item Ved rækkeombytning placeres en ikke-nulindgang øverst i pivotsøjlen.
-\item Skab nuller under pivotindgangen ved hjælp af rækkeudskiftning.
+\item Skab nulindgange under pivotindgangen ved hjælp af rækkeudskiftning.
 \item Øverste række markeres som afsluttet og trin $1-4$ gennemføres nu på den næste række.
 Dette gentages, indtil alle rækker er markeret som afsluttet.
 \item Alle rækker med pivotindgange skaleres, så alle pivotindgange er lig $1$.
