--- a/incl/pre/cmds.tex
+++ b/incl/pre/cmds.tex
@@ -108,14 +108,14 @@ theorem name
 
 \newtcbtheorem[no counter]
 {col}
-{}
+{title}
 {
 colback		= myblue!15,
 colframe	= myblue!15,
 coltitle	= black,
 before skip	= 20pt plus 2pt,
 after skip	= 20pt plus 2pt,
-fonttitle	= \bfseries
+fonttitle	= \bfseries,
 }
 {col}
 
