--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -22,36 +22,36 @@ Vektoren $\textbf{x} \in \R^n$ er en basal løsning, hvis og kun hvis $A\textbf{
 \end{enumerate}
 \end{thm}
 \begin{proof}
-Betragt et $x \in \R^n$ og antag, at der eksisterer indekser $\mathbf{A}_{B(1)},\ldots,\mathbf{A}_{B(m)}$, der opfylder (a) og (b).
+Betragt et $\textbf{v} \in \R^n$ og antag, at der eksisterer indekser $\mathbf{A}_{B(1)},\ldots,\mathbf{A}_{B(m)}$, der opfylder (a) og (b).
 %
-Det gælder således for de aktive begrænsninger, at $x_i=0$, når $i\neq B(1),\ldots,B(m)$, samt at $A\textbf{x}=\mathbf{b}$.
+Det gælder således for de aktive begrænsninger, at $v_i=0$, når $i\neq B(1),\ldots,B(m)$, samt at $A\textbf{v}=\mathbf{b}$.
 Dette medfører, at 
 %
-$$\sum_{i=1}^{m}\textbf{A}_{B(i)}x_{B(i)}=\sum_{i=1}^{n}\textbf{A}_ix_i=A\textbf{x}=\textbf{b}.$$
+$$\sum_{i=1}^{m}\textbf{A}_{B(i)}v_{B(i)}=\sum_{i=1}^{n}\textbf{A}_i v_i=A\textbf{v}=\textbf{b}.$$
 %
-Da søjlerne $\textbf{A}_{B(i)}$ for $i=1,\ldots,m$ er lineært uafhængige, kan $x_{B(1)},\ldots,x_{B(m)}$ bestemmes entydigt. 
+Da søjlerne $\textbf{A}_{B(i)}$ for $i=1,\ldots,m$ er lineært uafhængige, kan $v_{B(1)},\ldots,x_{B(m)}$ bestemmes entydigt. 
 Dermed har ligningssystemet, som er skabt af de aktive begrænsninger, en entydig løsning.
 %x_{B(i)} fra "da søjlerne ..." 
 Jævnfør \ref{thm:betingi},
 % Ved ikke om denne reference er rigtig xD
-følger det, at der er $n$ aktive begrænsninger, hvoraf $\mathbf{x}$ er en basal løsning. 
+følger det, at der er $n$ aktive begrænsninger, hvoraf $\mathbf{v}$ er en basal løsning. 
 \\\\
 %
 %
-Antag nu, at $\mathbf{x}$ er en basal løsning. 
+Antag nu, at $\mathbf{v}$ er en basal løsning. 
 Det skal nu vises, at (a) og (b) da er opfyldt.
-Lad $x_{B(1)},\ldots,x_{B(k)}$ være ikke-nul komponenter i $\textbf{x}$.
-Eftersom $\mathbf{x}$ er en basal løsning, følger nu, at ligningssysemet givet ved de aktive begrænsninger $x_i=0$, når $i\neq B(1),\ldots,B(k)$, samt  $$\sum_{i=1}^{n}\mathbf{A}_i x_i=\mathbf{b},$$ har en entydig løsning. 
-Det samme må derfor gøre sig gældende for $$\sum_{i=1}^{k}\mathbf{A}_{B(i)}x_{B(i)}=\mathbf{b}.$$
+Lad $v_{B(1)},\ldots,v_{B(k)}$ være ikke-nul komponenter i $\textbf{v}$.
+Eftersom $\mathbf{v}$ er en basal løsning, følger nu, at ligningssysemet givet ved de aktive begrænsninger $v_i=0$, når $i\neq B(1),\ldots,B(k)$, samt  $$\sum_{i=1}^{n}\mathbf{A}_i v_i=\mathbf{b},$$ har en entydig løsning. 
+Det samme må derfor gøre sig gældende for $$\sum_{i=1}^{k}\mathbf{A}_{B(i)}v_{B(i)}=\mathbf{b}.$$
 Det følger derfor, at søjlerne i $A_{B(1)},\ldots,A_{B(k)}$ er lineært uafhængige.
 %
-Hvis dette ikke var tilfældet, ville der findes løsninger til $$\sum_{i=1}^{k}\mathbf{A}_{B(i)} \lambda_i=\mathbf{0}$$ udover den trivielle, hvor $\lambda_i=0$ for $i=1,2,\ldots,k$, hvilket ville betyde, at løsningen $\mathbf{x}$ ikke er entydig. 
+Hvis dette ikke var tilfældet, ville der findes løsninger til $$\sum_{i=1}^{k}\mathbf{A}_{B(i)} \lambda_i=\mathbf{0}$$ udover den trivielle, hvor $\lambda_i=0$ for $i=1,2,\ldots,k$, hvilket ville betyde, at løsningen $\mathbf{v}$ ikke er entydig. 
 Dette er i modstrid til, at denne er en basal løsning.
 $\mathbf{A}_{B(1)},\ldots ,\mathbf{A}_{B(k)}$ er således lineært uafhængige og $k \leq m$.
 Da $A$ har $m$ lineært uafhængige rækker, er der ligeledes $m$ lineært uafhængige søjler.
 %her kommer noget der følger fra sætning 1.3 i sektion 1.5 tror ikke vi har noget tilsvarende.
 Der kan derfor findes $m-k$ søjler $\textbf{A}_{B(k+1)},\ldots,\textbf{A}_{B(m)}$, hvorom det gælder, at søjlerne $\mathbf{A}_{B(i)}$ med $i=1,\ldots,m$, er lineært uafhængige.
-Da $k \leq m$ gælder det, hvis $i \neq B(1),\ldots,B(m)$, at $i \neq B(1),\ldots,B(k)$ og $x_i=0$.
+Da $k \leq m$ gælder det, hvis $i \neq B(1),\ldots,B(m)$, at $i \neq B(1),\ldots,B(k)$ og $v_i=0$.
 %
 \end{proof}
 %der skal flere igennem det her bevis, tænker det er svært for andre end mig.
@@ -61,7 +61,7 @@ Som følge af \ref{thm:polystd} kan basale løsninger konstrueres ved hjælp af 
 %
 \begin{enumerate}
 \item Vælg $m$ lineært uafhængige søjler $\textbf{A}_{B(1)},\ldots,\textbf{A}_{B(m)}.$
-\item Lad $x_i=0$ for $i \neq B(1),\ldots,B(m).$
+\item Lad $v_i=0$ for $i \neq B(1),\ldots,B(m).$
 \item Løs ligningssystemet med de $m$ ligninger, $A\textbf{x}=\textbf{b}$ for $x_{B(1)}, \ldots , x_{B(m)}.$
 \end{enumerate}
 %
@@ -85,13 +85,13 @@ Det gælder, at $\mathcal{P}$ er en delmængde af $Q$, da alle elementer i $\mat
 Det skal dernæst vises, at $Q$ er en delmængde af $\mathcal{P}$.
 Da rang$(A)=k$, har rækkerummet af $A$ dimension $k$, $\text{dim}(\text{row}(A)) = k$, og et basis bestående af søjlerne $\textbf{a}_1,\ldots,\textbf{a}_k$. 
 Derfor kan alle rækker $\textbf{a}_i$ af $A$ udtrykes som en linearkombination af de andre rækker ved $\textbf{a}_i=\sum^{k}_{j=1}\lambda_{ij}\textbf{a}_j$ for skalarer $\lambda_{ij}$. 
-Lad $\textbf{x}$ være et element i $\mathcal{P}$. 
+Lad $\textbf{v}$ være et element i $\mathcal{P}$. 
 Så gælder
-$$b_i=\textbf{a}_i\textbf{x}=\sum^{k}_{j=1}\lambda_{ij}\textbf{a}_j\textbf{x}=\sum^{k}_{j=1}\lambda_{ij}b_j,$$
+$$b_i=\textbf{a}_i\textbf{v}=\sum^{k}_{j=1}\lambda_{ij}\textbf{a}_j\textbf{v}=\sum^{k}_{j=1}\lambda_{ij}b_j,$$
 for $i=1,\ldots,m.$
-Betragt nu et element $y$ i $Q$. 
+Betragt nu et element $\textbf{u}$ i $Q$. 
 Dette vil også tilhøre $\mathcal{P}$, da
-$$ \textbf{a}_i\textbf{y}=\sum^{k}_{j=1}\lambda_{ij}\textbf{a}_j\textbf{y}=\sum^{k}_{j=1}\lambda_{ij}b_j=b_i.$$
+$$ \textbf{a}_i\textbf{u}=\sum^{k}_{j=1}\lambda_{ij}\textbf{a}_j\textbf{u}=\sum^{k}_{j=1}\lambda_{ij}b_j=b_i.$$
 Dermed er det vist, at $Q$ er en delmængde til $\mathcal{P}$.
 Hermed er $Q=\mathcal{P}$, da $\mathcal{P}$ ligeledes er en delmængde af $Q$.
 \end{proof} \\
