--- a/incl/main/simplex_metoden/simplex_metoden_intro.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_intro.tex
@@ -1,21 +1,25 @@
-Som nævnt tidligere i rapporten, findes der en optimal løsning til et lineært ligningssystem på standard form, så længe der findes mindst én basal mulig løsning. 
-\textit{Simplexmetoden} benytter sig af denne egenskab og forsøger at finde den optimale løsning for en lineært ligningssystem på standard form.
-%
+Som vist i afsnit \ref{klogskab}, findes der en optimal løsning til et lineært ligningssystem på standardform, så længe der findes mindst én basal mulig løsning. 
+\textit{Simplexmetoden} benytter sig af denne egenskab og søger at finde den optimale løsning.
+Dette kapitel tager udgangspunkt i \citep[side 25-34]{lial} og \citep[side 82-87 og 94-100]{bert}, hvis ikke andet er angivet.
+Bemærk, at afsnit \ref{afsnittet} tager afsæt i et maksimumsproblem, imens øvrige afsnit tager udgangspunkt i minimumsproblemer.
 % -------------------------------------------------------------------------
 % Noget introducerende
 %
-\section{Praktisk anvendelse af Simplexmetoden}
-Simplexmetoden foretager som udgangspunkt følgende seks operationer, inden den afsluttes: 
+\input{incl/main/simplex_metoden/undgå_pivoteringslokke}
 %
-\begin{col}{}{}
+\section{Praktisk anvendelse af simplexmetoden}
+\label{afsnittet}
+Simplexmetoden foretager som udgangspunkt følgende seks trin, inden den afsluttes:
+%
+\begin{col}{Simplexmetoden}{}
 %
 % Denne skal eventuelt beskrives mere i dybdegående - Tager kort tid.
 \begin{enumerate}
 \item Omskriv optimeringsproblemet til standardform med slack-variable.  %1
-\item Opstil simplextabellen for optimeringsproblemet.					 %2
-\item Tjek optimering og identificér en pivotindgang.					 %3
+\item Opstil \textit{simplextabellen} for optimeringsproblemet.					 %2
+\item Kontroller for optimalitet ellers identificér en pivoteringsindgang.					 %3
 \item Opstil en ny tabel ved hjælp af pivotering. 						 %4
-\item Gentag operation 3 og 4, indtil den optimale løsning er fundet. 					 %5
+\item Gentag trin 3 og 4, indtil den optimale løsning er fundet. 					 %5
 \item Identificér den optimale løsning.									 %6
 \end{enumerate}
 %
@@ -28,13 +32,13 @@ I følgende afsnit uddybes ovenstående punkter, samt tilhørende teori, med udg
 %
 \begin{eks}
 \label{haribooooo}
-Haribo har to typer slikblandinger $x_1$ og $x_2$, hvor profitten for disse henholdsvis er $5$ og $4$ enheder.
-%(her kunne der også skrives tusind/millioner whatever ingen anelse om realistisk skala i haribos profitmargin)
+Haribo har to typer slikblandinger, $x_1$ og $x_2$, hvor profitten for disse henholdsvis er $5$ og $4$ valutaenheder.
+%(her kunne der også skrives tusind/millioner whatever ingen anelse om realistisk skala i haribos profitmargin).
 Disse er begrænset af produktionskapaciteten af lakrids og vingummi.
 Lakridsproduktion har en begrænsning på $78$ enheder, hvor der skal $3$ enheder lakrids i $x_1$ blandingen og $5$ enheder lakrids i $x_2$.
-Vingummiproduktionen har en begrænsning på $36$ enheder, hvor der skal $4$ enheder lakrids i $x_1$ blandingen og $1$ enheder lakrids i $x_2$. 
+Vingummiproduktionen har en begrænsning på $36$ enheder, hvor der skal $4$ enheder vingummi i $x_1$ blandingen og $1$ enhed vingummi i $x_2$. 
 %
-Disse betingelser danner følgende optimeringsproblemet:
+Disse betingelser danner optimeringsproblemet
 %
 \begin{align*}
 \begin{array}{lrrlr} 
@@ -46,40 +50,33 @@ Disse betingelser danner følgende optimeringsproblemet:
 \end{align*}
 %
 \end{eks}
-% 
-Dualproblemet til \ref{haribooooo} vil istedet minimere indholdet af sukker og kulhydrater begrænset af forholdet mellem to typer slik i en slikpose.
 %
 \subsubsection{1. Opskriv optimeringsproblemet på standardform med slack-variable.}
 %
-Generelt tager simplexmodellen udgangspunkt i, at alle variablene er positive. Jævnfør afsnit \ref{sec:standard} tilføjes $x_i^+$ og $x_i^-$, hvis der i optimeringsproblemet ikke er ikke-negativitetsbetingelser for variablene. 
+Generelt tager simplexmetoden udgangspunkt i, at alle variable er positive. Jævnfør afsnit \ref{sec:standard} tilføjes $x_i^+$ og $x_i^-$, hvis der i optimeringsproblemet ikke eksisterer ikke-negativitetsbetingelser for variablene. 
 I dette tilfælde er begge variable positive, og det er derfor ikke nødvendigt at opdele variablene. 
 Med udgangspunkt i metoden fra afsnit \ref{sec:standard} opstilles optimeringsproblemet derfor på standardform som
 %
 \begin{align*}
 \begin{array}{lrrrrrlr}
-\text{Maksimér}		& -5x_1 &-4x_2 &&& + z & =0\\
+\text{Maksimér}		& -5x_1 &-4x_2 &&& + z & =&0\phantom{,}\\
 \text{begrænset af}	&3x_1& +5x_2	& + \textcolor{blue}{s_1} 	&&&= 	&78,\\
 					&4x_1& + x_2	& & + \textcolor{blue}{s_2}	&&=	&	 36.\\
 \end{array}
 \end{align*}
-%Hvor kommer 78 og 36 fra? 
-Dog er objektfunktionen omskrevet med udgangspunkt i 
-\begin{align*}
--\textbf{c}^T\textbf{x} + z	 =0,
-\end{align*}
-hvor $z$ er den optimale værdi. 
 %
-Slack-variablene $s_1$ og $s_2$ er her markeret med blå, da de i sidste ende ikke tilføjes til løsningen. 
+Slack-variablene $s_1$ og $s_2$ er her markeret med blå, da de ikke indgår i den endelige løsning.
+%Slackvariablerne indgår i dualproblemets løsning. xd lit fam 420 
 %
 \subsubsection{2. Opstil simplextabellen for optimeringsproblemet}		
 % 
-Nu opstilles \textit{simplextabellen} for optimeringsproblemet. 
+Nu opstilles simplextabellen for optimeringsproblemet. 
 Med udgangspunkt i et generelt lineært optimeringsproblem på formen
 %
 % & =v, \text{ hvor } v=0
 \begin{align*}
 \begin{array}{lrl}
-\text{Maksimér}		&-\textbf{c}^T\textbf{x} + z	& =0	\\
+\text{Maksimér}		&z -\textbf{c}^T\textbf{x}	& =0	\\
 \text{begrænset af}	&A\textbf{x}	&=\mathbf{b},	\\
 					&\mathbf{x}				&\geq \mathbf{0},
 \end{array}
@@ -88,7 +85,7 @@ er simplextabellen en matrix, som indeholder de lineære betingelser, slack-vari
 Matricen $\mathbf{A}$ opskrives først, og derefter opskrives identitesmatricen $e_{m+1}$, hvor $m$ er antallet af slack-variable, samt den optimale løsning $z$, og til sidst opskrives $\mathbf{b}$. 
 Under $\mathbf{A}$ tilføjes objektfunktionen $- \mathbf{c}^T$. 
 Identitetsmatricen $I_m$, som dannes med udgangspunkt i antallet af slack-variable danner basismatricen $B$.
-Med udgangspunkt i forrige optimeringsproblem ser en generel formel i simplextabellen dermed ud som følgende:
+En general form for simplextabbelen ser ud som følger:
 %
 \begin{align*}
 \begin{blockarray}{ccccccccccc}
@@ -118,9 +115,9 @@ x_1 & x_2 & \textcolor{blue}{s_1} & \textcolor{blue}{s_2} & z & b \\
 \end{blockarray}.
 \end{align*}
 %
-\subsubsection{3. Tjek optimering og identificér en pivotindgang}
+\subsubsection{3. Kontroller for optimalitet ellers identificér en pivoteringsindgang}
 %
-Først tjekkes der efter optimering ved at finde det mindste negative koefficient i objektfunktionen, hvilket i dette tilfælde findes i nederste række i simplextabellen:
+Først kontrolleres for optimalitet ved at finde det mindste negative koefficient i objektfunktionen, hvilket findes i nederste række i simplextabellen:
 %
 \begin{align*}
 \begin{blockarray}{cccccc}
@@ -135,20 +132,20 @@ x_1 & x_2 & \textcolor{blue}{s_1} & \textcolor{blue}{s_2} & z & b \\
 \end{align*}
 %
 Søjlen, hvori denne værdi er, kaldes \textit{pivotsøjlen}. 
-Herefter findes \textit{pivoteringsindgangen} og \textit{pivotrækken}, ved at finde den mindste $u_i$-værdi ud fra 
+Herefter findes \textit{pivotrækken} og \textit{pivoteringsindgangen}, ved at finde den mindste $u_i$-værdi ud fra 
 \begin{align*}
 \frac{a_{i,j}}{b_j}=u_i
 \end{align*}
 %
 i pivotsøjlen.
-Pivotindgangen for eksemplet findes ved
+Pivoteringsindgangen findes ved at betragte 
 %
 \begin{align*}
-\frac{78}{3} =26 \text{  } \text{ og } \text{   } \frac{36}{4} =9.
+u_1 = \frac{78}{3} = 26 \text{  } \text{ og } \text{   } u_2 = \frac{36}{4} = 9.
 \end{align*}
 %
-Eftersom $9$ er den laveste værdi, er $a_{2,1}$ pivotindgangen, mens den række, som den er i, er pivotrækken. 
-I nedenstående er pivotindgangen markeret.
+Eftersom $9$ er den laveste værdi, er $a_{2,1}$ pivoteringsindgangen, mens den række, som den er i, er pivotrækken. 
+I nedenstående er pivoteringsindgangen markeret.
 %
 \begin{align*}
 \begin{blockarray}{cccccc}
@@ -164,7 +161,7 @@ x_1 & x_2 & \textcolor{blue}{s_1} & \textcolor{blue}{s_2} & z & b \\
 %	
 \subsubsection{4. Opstil en ny tabel ved hjælp af pivotering}
 %
-Med udgangspunkt i de elementære rækkeoperationer per \ref{defn:element}, samt Gauss-elimination jævnfør afsnit \ref{gauss}, skaleres pivotindgangen til $1$, og der skabes nuller under og over pivotindgangen ved hjælp af rækkeudskiftning.
+Ved brug af de elementære rækkeoperationer jævnfør \ref{defn:element}, skaleres pivoteringsindgangen til $1$, og der skabes nulindgange under og over pivoteringsindgangen ved hjælp af rækkeudskiftning.
 Nedenfor ses dette gjort for eksemplet.
 %
 %& \begin{blockarray}{cccccc}
@@ -200,11 +197,11 @@ x_1 & x_2 & \textcolor{blue}{s_1} & \textcolor{blue}{s_2} & z & b \\
 \end{blockarray}.
 \end{align*}	
 %
-\subsubsection{5. Kør 3 og 4 indtil den optimale løsning er fundet}
+\subsubsection{5. Gentag trin 3 og 4 indtil den optimale løsning er fundet}
 %
-Denne proces forsættes nu, indtil der ikke er flere negative tal i objektfunktionen.
-\textit{Pivotering} er processen fra valget af den største negative værdi i objektfunktionen til at en ny værdi i objektfunktionen kan vælges. 
-Der tjekkes derfor efter optimering igen, og en ny pivotindgang er valgt ved den største negative værdi. 
+Denne proces fortsættes nu, indtil der ikke er flere negative tal i objektfunktionen.
+Bemærk, at \textit{pivotering} er processen fra valget af den mindste negative værdi i objektfunktionen indtil en ny værdi i objektfunktionen kan vælges.
+Der kontrolleres for optimalitet igen, og en ny pivoteringsindgang er valgt ved den mindste negative værdi. 
 Denne er markeret i nedenstående matrix.	
 %Jeg tænker, at ovenstående kan præciseres, men jeg er blank pt.... Så hvad ved jeg :0) 
 \begin{align*}
@@ -219,13 +216,13 @@ x_1 & x_2 & \textcolor{blue}{s_1} & \textcolor{blue}{s_2} & z & b \\
 \end{blockarray}
 \end{align*}
 %
-Pivotindgangen findes ved
+Pivoteringsindgangen findes ved at betragte
 %
 \begin{align*}
-\frac{51}{\frac{17}{4}} =12 \text{  }  \text{ og }  \text{   } \frac{9}{\frac{1}{4}} =36.
+u_1 = \frac{51}{\frac{17}{4}} =12 \text{  }  \text{ og }  \text{   } u_2 = \frac{9}{\frac{1}{4}} =36.
 \end{align*}
 %
-Pivotindgangen er $a_{1,2}$, da denne giver den mindste værdi på $12$, hvilket er markeret i nedenstående matrix.
+Pivoteringsindgangen er $a_{1,2}$, da denne giver den mindste værdi på $12$, hvilket er markeret i nedenstående matrix.
 %
 \begin{align*}
 \begin{blockarray}{cccccc}
@@ -239,7 +236,7 @@ x_1 & x_2 & \textcolor{blue}{s_1} & \textcolor{blue}{s_2} & z & b \\
 \end{blockarray}
 \end{align*}
 %
-Pivotindgangen skaleres til $1$, og der skabes nuller under og over pivotindgangen, ved de elementære rækkeoperationer:
+Pivotindgangen skaleres til $1$, og der skabes nulindgange under og over pivotindgangen:
 %& \begin{blockarray}{cccccc}
 %x_1 & x_2 & \textcolor{blue}{s_1} & \textcolor{blue}{s_2} &z & b \\
 %\begin{block}{[cc|ccc|c]}
